[package]

name = "centipede-rs"
version = "0.0.1"
authors = ["joseph <joe@joehallenbeck.com>"]
tags = []

[[bin]]

name = "centipede-rs"
path = "src/main.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"
